--- a/Research Project/src/application/Application.fxml
+++ b/Research Project/src/application/Application.fxml
@@ -226,7 +226,7 @@
                                     <TextField fx:id="textField_TotalWordsToCheckAtOnce" layoutX="276.0" layoutY="94.0" prefHeight="25.0" prefWidth="171.0" />
                                     <TextField fx:id="threadsToDedicateToASinglePassword" layoutX="287.0" layoutY="178.0" />
                                     <Button fx:id="selectOutputFile" layoutX="28.0" layoutY="67.0" mnemonicParsing="false" onAction="#chooseOutputFile" prefHeight="40.0" prefWidth="128.0" text="File Ouput Directory" />
-                                    <CheckBox layoutX="8.0" layoutY="49.0" mnemonicParsing="false" text="Include Password Feedback" />
+                                    <CheckBox fx:id="chxbxAddPasswordFeedback" layoutX="8.0" layoutY="49.0" mnemonicParsing="false" text="Include Password Feedback" />
                                  </children>
                               </AnchorPane>
                           </content>
